# codal-tsetmc

./: .env.sample  .gitignore  LICENSE  README.md  build.sh  pyproject.toml  requirements-docs.txt  requirements.txt  setup.py
data/: price_dollar_rl.csv  stocks.csv  treasury_bill.csv
docs/: codal.html  financial-statement.html  guide.html  index.html  installation.html  intro.html  other.html  references.html  robots.txt  search.json  sitemap.xml  treasury-bill.html  tsetmc.html
docs/css/: rtl-style.css
docs/site_libs/bootstrap/: bootstrap-dark.min.css  bootstrap.min.css
docs_src/: .gitignore  _quarto.yml  codal.qmd  financial-statement.qmd  guide.qmd  index.qmd  installation.qmd  intro.qmd  other.qmd  references.qmd  requirements.txt  treasury-bill.qmd  tsetmc.qmd
docs_src/assets/yml/: _fa.yml  test.py
docs_src/bib/: references.bib
docs_src/csl/: ieee.csl
docs_src/html/: header.html
docs_src/py/: string_tools.py
docs_src/yml/: test.py
src/codal_tsetmc/: __init__.py  initializer.py
src/codal_tsetmc/config/: __init__.py  config.default.yml  engine.py
src/codal_tsetmc/download/: __init__.py  adjusted.py  capital.py  client.py  commodity.py  company.py  dividend.py  exception.py  financial_report.py  financial_statement.py  price.py  query.py  stock.py
src/codal_tsetmc/download/codal/: __init__.py  category.py  company.py  financial_statement.py  informations.py  letters.py  query.py  report.py  string_edit.py
src/codal_tsetmc/download/other/: __init__.py  commodity.py
src/codal_tsetmc/download/tsetmc/: __init__.py  adjusted.py  capital.py  client.py  dividend.py  informations.py  price.py  stock.py
src/codal_tsetmc/models/: __init__.py  commodities.py  companies.py  create.py  stocks.py
src/codal_tsetmc/models/codal/: __init__.py  auditor.py  company.py  company_nature.py  company_state.py  company_type.py  financial_year.py  industry_group.py  letter.py  letter_group.py  letter_type.py  report_type.py  reporting_type.py
src/codal_tsetmc/models/tsetmc/: __init__.py  stock.py  stock_capital.py  stock_group.py  stock_price.py
src/codal_tsetmc/tools/: __init__.py  api.py  database.py  exception.py  plot.py  string.py  string_edit.py
tests/: finpy.py  requirements.txt  test.qmd
