[tool.poetry]
name = "codal-tsetmc"
version = "2.3.0"
description = "Data Downloader for Codal and Tehran stock market"
authors = ["Mohsen Ebrahimi <mohsenebrahimy.ir@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://mohsenebrahimyir.github.io/codal-tsetmc/"
documentation = "https://mohsenebrahimyir.github.io/codal-tsetmc/"
repository = "https://github.com/mohsenebrahimyir/codal-tsetmc.git"
keywords = ["codal", "tsetmc", "stock", "iran", "finance", "crawler"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

packages = [
    { include = "codal_tsetmc", from = 'src' }
]
include = ["README.md", "LICENSE"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
pandas = "^2.3"
SQLAlchemy = "^2.0"
requests = "^2.25"
jalali-pandas = "^0.2"
nest-asyncio = "^1.5"
aiohttp = "^3.10"
aiosignal = "^1.2"
beautifulsoup4 = "^4.11"
html5lib = "^1.1"
lxml = "^5.3"
PyYAML = "^6.0"

[poetry.group.dev.dependencies]
pre-commit = ">=2.15"
pylint = ">=2.12"
pytest = ">=6.2"
ipython = ">=7.30"
ipdb = ">=0.13"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
