[project]
name = "codal-tsetmc"
version = "3.0.1"
description = "Data Downloader for Codal and Tehran stock market"
authors = [
    {name = "Mohsen Ebrahimi", email = "mohsenebrahimy.ir@gmail.com"},
]
license = "MIT"
readme = "README.md"
keywords = ["codal", "tsetmc", "stock", "iran", "finance", "crawler"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial :: Investment",
]
requires-python = ">=3.10,<4.0"

dependencies = [
    "pandas>=2.3,<3.0",
    "SQLAlchemy>=2.0,<3.0",
    "requests>=2.25,<3.0",
    "jalali-pandas>=0.2,<0.3",
    "nest-asyncio>=1.5,<2.0",
    "aiohttp>=3.10,<4.0",
    "aiosignal>=1.2,<2.0",
    "beautifulsoup4>=4.11,<5.0",
    "html5lib>=1.1,<2.0",
    "lxml>=5.3,<6.0",
    "PyYAML>=6.0,<7.0",
]

[project.urls]
homepage = "https://mohsenebrahimyir.github.io/codal-tsetmc/"
documentation = "https://mohsenebrahimyir.github.io/codal-tsetmc/"
repository = "https://github.com/mohsenebrahimyir/codal-tsetmc.git"

[tool.poetry]
packages = [
    { include = "codal_tsetmc", from = 'src' }
]
include = ["README.md", "LICENSE"]

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.15"
pylint = "^2.12"
pytest = "^6.2"
ipython = "^7.30"
ipdb = "^0.13"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
